--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,17 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/otherDancers.js"></script>
+    <script src="src/methods.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMovingDancer">add a moving dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">add a dancer that changes color</a>
+      <a href="#" class="lineUpButton" onclick="lineUp()">line up the dancers</a>
+      </div>
     <script src="src/init.js"></script>
   </body>
 </html>
