--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,6 +16,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMovingDancer">add a moving dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">add a dancer that changes color</a>
       <a href="#" class="lineUpButton" onclick="lineUp()">line up the dancers</a>
+      <span id='logPos'></span>
       </div>
     <script src="src/init.js"></script>
   </body>
