--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,6 +15,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMovingDancer">add a moving dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">add a dancer that changes color</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeFollowDancer">add a chasing dancer</a>
       <a href="#" class="lineUpButton" onclick="lineUp()">line up the dancers</a>
       <span id='logPos'></span>
       </div>
