fish can eat things and grow!

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,10 +12,10 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMovingDancer">add a moving dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">add a dancer that changes color</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeFollowDancer">add a chasing dancer</a>
+      <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dot</a> -->
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMovingDancer">Add ten fish</a>
+      <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">add a dancer that changes color</a> -->
+      <a href="#" class="addPlayerButton" data-dancer-maker-function-name="makeFollowDancer">Start</a>
       <a href="#" class="lineUpButton" onclick="lineUp()">line up the dancers</a>
       <span id='logPos'></span>
       </div>
