made a start/stop button that adds a player, or removes the player, button also toggles

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,7 +16,8 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMovingDancer">Add ten fish</a>
       <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">add a dancer that changes color</a> -->
       <a href="#" class="addPlayerButton" data-dancer-maker-function-name="makeFollowDancer">Start</a>
-      <a href="#" class="lineUpButton" onclick="lineUp()">line up the dancers</a>
+      <a href="#" class="stopButton">Stop</a>
+      <a href="#" class="lineUpButton" onclick="lineUp()">line up</a>
       <span id='logPos'></span>
       </div>
     <script src="src/init.js"></script>
