minor edits to make it look nicer

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Object Dance Party</title>
+    <title>Aquarium</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
@@ -11,13 +11,13 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
+      <!-- <span class="title">object dance party</span> -->
       <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dot</a> -->
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMovingDancer">Add ten fish</a>
       <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeColorDancer">add a dancer that changes color</a> -->
       <a href="#" class="addPlayerButton" data-dancer-maker-function-name="makeFollowDancer">Start</a>
       <a href="#" class="stopButton">Stop</a>
-      <a href="#" class="lineUpButton" onclick="lineUp()">line up</a>
+      <!-- <a href="#" class="lineUpButton" onclick="lineUp()">line up</a> -->
       <span id='logPos'></span>
       </div>
     <script src="src/init.js"></script>
